--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "lodash": "^4.17.10",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "scss-loader": "0.0.1",
+    "url": "^0.11.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
@@ -34,6 +36,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
