--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.10",
     "mint-ui": "^2.2.13",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "scss-loader": "0.0.1",
