--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,10 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime",["component", [
+  "ignore": [
+    "./src/lib/mui/js/mui.min.js"
+  ],
+  "plugins": [ "transform-vue-jsx", "transform-runtime",["component", [
     {
       "libraryName": "mint-ui",
       "style": true
