--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "bootstrap": "^3.3.7",
-    "lodash": "^4.17.10",
+    "less": "^3.8.0",
+    "less-loader": "^4.1.0",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
@@ -19,8 +21,10 @@
     "scss-loader": "0.0.1",
     "url": "^0.11.0",
     "vue": "^2.5.2",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-preview": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -29,6 +33,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
@@ -42,6 +47,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.10",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
