--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.7",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
+    "mddir": "^1.1.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
